# slurm-spank-compat-rs

./: .gitignore  Cargo.toml  README.md  build.rs
example/hello/: Cargo.toml
example/hello/src/: lib.rs
example/renice/: Cargo.toml
example/renice/src/: lib.rs
include/slurm_20_11/slurm/: spank.h
include/slurm_21_08/slurm/: slurm_errno.h  slurm_version.h
include/slurm_22_05/slurm/: slurm_errno.h  slurm_version.h  spank.h
include/slurm_23_02/slurm/: slurm_errno.h  slurm_version.h  spank.h
include/slurm_23_11/slurm/: slurm_errno.h  slurm_version.h  spank.h
src/: lib.rs
src/compat/: compat_20_11.rs  compat_21_08-23_02.rs
src/spank/: spank_20_11.rs  spank_21_08.rs  spank_22_05.rs  spank_23_02.rs  spank_23_11.rs
