[workspace]
resolver = "2"
exclude = ["example", "test"]

[package]
name = "slurm-spank-compat"
version = "0.1.2"
authors = ["Yunlong Feng <ylfeng@ir.hit.edu.cn>", "Francois Diakhate <fdiakh@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Safe Rust bindings to the Slurm SPANK API"
repository = "https://github.com/alongwy/slurm-spank-compat-rs"
readme = "README.md"
keywords = ["Slurm", "SPANK", "plugin", "HPC", "cluster"]

[lib]
name = "slurm_spank_compat"

[dependencies]
byte-strings = "0.3.1"
lazy_static = "1.4.0"
libc = "0.2.154"
num_enum = "0.7.2"
tracing = "0.1.40"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.69"
